firebase frontend integration